# multilang

./: meson.build  readme.md
examples/: ex01.cpp  ex02.c  ex03.py  meson.build  readme.md
include/: meson.build
include/graph/: digraph.h  digraph.hpp  meson.build
pygraph/: meson.build  pygraph.cpp
python/pygraph/: __init__.py  digraph.py
src/: c_digraph.cpp  digraph.cpp  meson.build
